Added half theta-theta-6 graphs.

--- a/spanners/index.html
+++ b/spanners/index.html
@@ -17,6 +17,7 @@
 			<form name="modesForm">
 				<input type="radio" id="t6" name="mode" value="t6" checked/> &Theta;6
 				<input type="radio" id="tt6" name="mode" value="tt6"/> &Theta;&Theta;6
+				<input type="radio" id="half-tt6" name="mode" value="half-tt6"/> Half &Theta;&Theta;6
 				<input type="radio" id="yaoyao" name="mode" value="yaoyao"/> YaoYao
 			</form>
                 </div>
