--- a/deep-point-sets/index.html
+++ b/deep-point-sets/index.html
@@ -1,10 +1,7 @@
-
-
-
 <!DOCTYPE html>
 <html>
         <head>
-                <title>Deep Point Sets Tool</title>
+		<title>Deep Point Sets</title>
                 <script type="text/javascript" src="deep.js"></script>
                 <link href="style.css" rel="stylesheet" type="text/css">
         </head>
